# cpp-project-template

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.cpp
tests/: test_main.cpp
